k8s/grpc-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    EntandoApp: quickstart
    entando.org/deployment: quickstart
    entando.org/entando-resource-kind: EntandoApp
  name: quickstart-server-grpc-service 
spec:
  ports:
  - name: grpc-port
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    EntandoApp: quickstart
    entando.org/deployment: quickstart
    entando.org/entando-resource-kind: EntandoApp
