k8s/portal-console-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-console
spec:
  ports:
    - port: 8080
  selector:
    tier: portal-console
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-console
  labels:
    app: en7-frontend
spec:
  selector:
    matchLabels:
      tier: portal-console
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: portal-console
    spec:
      containers:
      - image: eugeniosant/portal-console:7.0.0.4-SNAPSHOT
        name: portal-console
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: portal-console
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: quickstart-portal-console-ingress
spec:
  rules:
    - host: portal-console-entando.10-133-66-22.nip.io
      http:
        paths:
          - path: /portal-console
            pathType: ImplementationSpecific
            backend:
              service:
                name: portal-console
                port:
                  number: 8080
